feat: add CMS architecture and ABM foundation

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,12 @@
 # Enable Backend Integrations
 VITE_ENABLE_CLEARBIT=false
 VITE_ENABLE_6SENSE=false
+VITE_ENABLE_RB2B=true
 
 # API Keys (Add yours here)
 VITE_CLEARBIT_KEY=pk_...
 VITE_6SENSE_ID=...
+VITE_RB2B_ID=YOUR_RB2B_ID_HERE # e.g. "69420-abcde"
 
 # Form Handling (HubSpot)
 VITE_HUBSPOT_PORTAL_ID=244225374
