--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
