--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "puppeteer": "^24.36.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "vite-plugin-prerender": "^1.0.8"
   }
 }
