Fix: Remove prerender from build for Cloudflare

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node scripts/prerender.cjs",
+    "build": "vite build",
+    "build:prerender": "vite build && node scripts/prerender.cjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
