--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ VITE_RB2B_ID=YOUR_RB2B_ID_HERE # e.g. "69420-abcde"
 # Form Handling (HubSpot)
 VITE_HUBSPOT_PORTAL_ID=244225374
 VITE_HUBSPOT_FORM_ID=b631cbcc-1f01-47f9-926c-715a4cb2cd8a
+
+# Supabase
+VITE_SUPABASE_URL=YOUR_SUPABASE_URL
+VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
