--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.1",
     "dompurify": "^3.3.1",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.473.0",
